# Amanara-AI-RAG-Chatbot

./: .env.example  .gitignore  README.md  main.py  prompt.txt  pyproject.toml  requirements.txt  streamlit_app.py  tree.txt
archive/: company_info.txt
scripts/: create_collection.py  list_models.py  test_chatbot.py  test_chunker.py  test_embedding.py  test_gemini.py  test_ingestion.py  test_loader.py  test_prompt_builder.py  test_qdrant.py  test_retriever.py
src/amanara/: main.py
src/amanara/api/: chat.py  health.py  router.py
src/amanara/config/: settings.py
src/amanara/memory/: conversation_memory.py
src/amanara/models/: chunk.py  document.py
src/amanara/prompts/: prompt_builder.py
src/amanara/rag/: chatbot.py  chunker.py  ingestion.py  loader.py  retriever.py
src/amanara/services/: embedding_service.py  gemini_service.py  intent_service.py  qdrant_service.py
src/amanara/ui/: app.py
