[project]
name = "amanara-chatbot"
version = "0.1.0"
description = "AI-powered RAG chatbot for Amanara Energy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.2",
    "google-genai>=2.12.1",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.2.7",
    "langchain-qdrant>=1.1.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

